--- a/roles/configure_nebula/defaults/main.yml
+++ b/roles/configure_nebula/defaults/main.yml
@@ -9,6 +9,8 @@ nebula_log_level: info
 nebula_port: "{{ nebula_port_v }}"
 nebula_range_cidr: "{{ nebula_range_cidr_v }}"
 nebula_cert_dir: "/home/{{ user }}/Certificates"
+nebula_inject_keys: true
+nebula_package_install: true
 nebula_inbound_rules:
 
   - port: "{{ ssh_port_v }}"
