Added support for LAN and WAN lighthouse nodes to support redundancy

--- a/inventory/all.ini
+++ b/inventory/all.ini
@@ -2,5 +2,11 @@
 localhost ansible_connection=local
 
 [servers]
-nexus ansible_host="{{ nexus_ip_address }}"
-vpn ansible_host="{{ vpn_ip_address }}"
+nexus ansible_host="{{ nexus_ip_address_v }}"
+vpn ansible_host="{{ vpn_ip_address_v }}"
+vpn2 ansible_host="{{ vpn2_ip_address_v }}"
+
+[nebula_servers]
+nexus ansible_host="{{ nexus_ip_address_v }}"
+# vpn ansible_host="{{ vpn_ip_address_v }}"
+vpn2 ansible_host="{{ vpn2_ip_address_v }}"
