--- a/host_vars/vpn2.yml
+++ b/host_vars/vpn2.yml
@@ -2,14 +2,18 @@ ansible_become_pass: "{{ lookup('bitwarden_password', 'vpn_linux_user_password')
 user_password: "{{ lookup('bitwarden_field', 'hash', 'vpn_linux_user_password') }}"
 
 # Common Overrides
-hostname: "vpn"
+hostname: "vpn2"
 fqdn: "{{ hostname }}.{{ domain }}"
 
 # Nebula Overrides
 nebula_is_lighthouse: true
 nebula_inbound_rules:
 
-  - port: "{{ ssh_port_v }}"
+  - port: "22"
+    proto: tcp
+    acl_group: admin
+
+  - port: "443"
     proto: tcp
     acl_group: admin
 
@@ -17,4 +21,4 @@ nebula_inbound_rules:
     proto: udp
     ca_sha: "{{ nebula_ca_sha_v }}"
 
-nebula_ip: "10.10.0.1"
+nebula_ip: "10.10.0.2"
